# backend-javascriptcore

./: README.md  linux64.sh  osx64.sh  win64.bat  windows_64.cmd
.github/workflows/: build.yml  test.yml
misc/: cmakeconfig.h
patchs/: webkit_vc_compile_for_8715d40f1d7038e9f43619d153210883228d17a6.patch
test/: CMakeLists.txt  make_linux64.sh  make_osx.sh  make_win64.bat  prepare_deps.sh
test/src/: hello.cpp  perf.cpp
